@@ -79,6 +79,13 @@ in order to select the correct service (program). If the input is MPTS
 and \fB\-\-input\-service\fR is not used, tsdecrypt chooses the last service
 listed in PAT.
 .TP
+\fB\-W\fR, \fB\-\-input\-dump\fR <filename>
+Save input stream in <filename>. If the input is RTP, the file will contain
+the data without RTP headers (pure mpeg transport stream). Easiest way to
+save the input is using command line like the following:
+
+tsdecrypt -I 239.78.78.78:5000 -O /dev/null -s 0.0.0.0 -W file.ts
+.TP
 .SH OUTPUT OPTIONS
 .PP
 .TP
